# sparkctl

./: .gitignore  LICENSE  README.md  cluster.yaml.example  cluster.yaml.single-node.example  pyproject.toml
docker/: Dockerfile  server.Dockerfile
docker/grafana/dashboards/: vllm-cluster.json
docs/: backends.md
recipes/: gemma-4-26b-nvfp4.yaml  gemma-4-31B-it.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  minimax-m3-reap50.yaml  nemotron-3-super.yaml  qwen3-235b.yaml  qwen3-coder-30b.yaml  qwen3-coder-next.yaml  qwen3.6-35b.yaml
src/sparkctl/: __init__.py  config.py  deploy.py  distribution.py  manifest.py  recipes.py  remote.py  secrets.py
src/sparkctl/backends/: __init__.py  base.py  docker.py  k8s.py
src/sparkctl/cli/: create.py  edit.py  main.py  resource.py  validate.py
src/sparkctl/engines/: __init__.py  ollama.py  vllm.py
src/sparkctl/server/: __main__.py  app.py  dash.py  lifecycle.py  litellm_bridge.py  metrics.py
systemd/: sparkctl-server.service  sparkctl.service
tests/: test_backends.py  test_boot.py  test_cli.py  test_config_schema.py  test_create.py  test_distribution.py  test_edit.py  test_engines_vllm.py  test_litellm_bridge.py  test_metrics.py  test_recipes.py  test_secrets.py  test_server_app.py  test_validate.py
